css tweak for alignment fix (maybe?)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,8 +43,8 @@
 }
 
 .sub-menu-btn{
-  margin-left:10px;
-  margin-right: 10px;
+  margin-left:0.5em;
+  margin-right:0.5em;
   padding: 3px;
 }
 
